Criação de banco e geneciamento de infos sensiveis

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,8 @@ Django==5.0.6
 django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
-Faker==25.2.0
 Markdown==3.6
-python-dateutil==2.9.0.post0
-six==1.16.0
+psycopg2==2.9.9
+python-decouple==3.8
 sqlparse==0.5.0
 tzdata==2024.1
-validate-docbr==1.10.0
